--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -36,7 +36,7 @@
 
 .search-results-wrapper {
   background-color: $gray-lighter;
-  padding-top: 50px;
+  padding-top: 70px;
 
   @media (min-width: $screen-md-min) {
     bottom: 0;
